--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 body {
-  margin: 0;
+  background-image: url("bck4.jpg");
+  background-blend-mode: soft-light;
+  background-color: #f3e8d9;
+
+
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
